...
    <string name="update">Update Step</string>
    <string name="logIn">Google Log In</string>
    <string name="height"> Height: </string>
    <string name="goal"> Goal: </string>
    <string name="save"> Save </string>
    <string name="go_back"> Go Back </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="friend_email">Friend\'s Email Address</string>
    <string name="done">Done</string>
    <string name="inch">Inch</string>
    <string name="feet">Feet</string>
    <string name="start_walk">Start Walk</string>
    <string name="end_walk">End Walk</string>
    <string name="empty_space">\n\n\n\n"</string>
    <string name="title_activity_friends">Friend List</string>
    <string name="add_friend_dialog_title">Add Friend</string>
    <string name="add_friend_dialog_message">Enter the email id of your friend</string>
    <string name="remove_friend_dialog_title">Remove Friend</string>
    <string name="remove_friend_dialog_message">Do you want to remove %s from your friends list</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="pending">PENDING</string>
    <string name="friend">Friend</string>
    <string name="accept_friend_request">accept Friend Request</string>
    <string name="reject_friend_request">Reject Friend Request</string>
    <string name="friend_list">Friend List</string>
    <string name="settings">Settings</string>
...
